<resources>
    <string name="app_name">Loan Monitoring</string>
    <string name="label_create_loan">Create Loan</string>
    <string name="label_logout">Log-out</string>
    <string name="label_save">Save</string>
    <string name="label_amount">Amount</string>
    <string name="label_borrower">Borrower</string>
    <string name="label_lender">Lender</string>
    <string name="label_description">Description</string>
    <string name="label_loans">Loans</string>
    <string name="label_notifications">Notifications</string>
    <string name="helpertext_required">*Required</string>
    <string name="errortext_required">This field is required</string>
    <string name="errortext_select_borrower">Invalid input. Please select borrower</string>
    <string name="errortext_select_lender">Invalid input. Please select lender</string>
    <string name="label_loan_details">Loan Details</string>
    <string name="label_remaining_balance">Remaining Balance</string>
    <string name="label_expenses">Expenses</string>
    <string name="label_details">Details</string>
    <string name="description_add_payment">Add Payment</string>
    <string name="label_created_by">Created By</string>
    <string name="label_created_on">Created On</string>
    <string name="label_add_payment">Add Payment</string>
    <string name="label_date">Date</string>
    <string name="placeholder_status">Status</string>
    <string name="description_confirm_payment">Confirm Payment</string>
</resources>