<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loansFragment">

    <fragment
        android:id="@+id/loansFragment"
        android:name="com.example.loanmonitoring.fragments.LoansFragment"
        android:label="@string/label_loans"
        tools:layout="@layout/fragment_loans">
        <action
            android:id="@+id/action_loansFragment_to_loanFormFragment"
            app:destination="@id/loanFormFragment" />
        <action
            android:id="@+id/action_loansFragment_to_loanDetailsFragment"
            app:destination="@id/loanFragment" />
    </fragment>

    <fragment
        android:id="@+id/loanFormFragment"
        android:name="com.example.loanmonitoring.fragments.LoanFormFragment"
        android:label="@string/label_create_loan"
        tools:layout="@layout/fragment_loan_form" />

    <fragment
        android:id="@+id/loanFragment"
        android:name="com.example.loanmonitoring.fragments.LoanFragment"
        tools:layout="@layout/fragment_loan" >
        <action
            android:id="@+id/action_loanFragment_to_paymentFormFragment"
            app:destination="@id/paymentFormFragment" />
    </fragment>

    <fragment
        android:id="@+id/paymentFormFragment"
        android:name="com.example.loanmonitoring.fragments.PaymentFormFragment"
        android:label="@string/label_add_payment"
        tools:layout="@layout/fragment_payment_form" />
</navigation>